# PkgGen

./: CHANGELOG.md  DEVELOPMENT.md  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml
config/: pkggenerator.yml.example
docker/: Dockerfile.archlinux
pkggen/: main.py
pkggen/controllers/: base.py
pkggen/core/: exc.py
tests/: test_pkggenerator.py
